--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
   },
   "dependencies": {
     "body-parser": "~1.8.1",
+    "connect-flash": "~0.1.1",
+    "connect-redis": "~2.1.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "express": "~4.9.0",
+    "express-session": "~1.9.1",
+    "hiredis": "~0.1.17",
     "jade": "~1.6.0",
     "mongoose": "~3.8.19",
+    "mongoose-findorcreate": "*",
     "mongoose-paginate": "~3.1.3",
     "morgan": "~1.3.0",
     "passport": "~0.2.1",
+    "passport-github": "^0.1.5",
     "passport-http": "^0.2.2",
-    "serve-favicon": "~2.1.3",
-    "connect-flash": "~0.1.1",
     "passport-local": "~1.0.0",
-    "connect-redis": "~2.1.0",
-    "express-session": "~1.9.1",
-    "redis": "~0.12.1",
-    "hiredis": "~0.1.17",
-    "mongoose-findorcreate": "*",
     "passport-vkontakte": "*",
+    "redis": "~0.12.1",
+    "serve-favicon": "~2.1.3",
     "validator": "*"
   },
   "description": "NodeJS blog example",
